# LAIS-Agent-CoComm

./: .gitignore  LICENSE  README.md  pyproject.toml  test_install.py
docs/: _config.yml  api-reference.md  architecture.md  examples.md  getting-started.md  index.md  vault-integration.md
examples/: example_usage.py
src/agent_sync/: __init__.py  a2a_server.py  async_agent.py  config.py  consensus.py  goal_planner.py  graph_evolution.py  mcp_bridge.py  memory_sync.py  roles.py  session_log.py  trigger.py  trust.py  vault_sync.py  websocket_server.py
